<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/img_login"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    android:gravity="center">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        style="@style/TextViewBind"
        android:text="@string/tips_have_num"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/bind_spinner"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/padding_common"
        android:layout_marginLeft="@dimen/padding_common"
        android:layout_marginRight="@dimen/padding_common"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:theme="@style/Theme.Design.Light"/>

    <Button
        android:id="@+id/sure_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/login_button"
        android:text="@string/bt_sure"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <View
        android:id="@+id/bind_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/tips_bind_num"
        style="@style/TextViewBind"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/bind_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_bind"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bind_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/login_button"
        android:text="@string/bt_bind"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>