<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_home_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/padding_common"
    android:background="@drawable/card_background"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardPreventCornerOverlap="false">

    <RelativeLayout
        android:id="@+id/rl_home_item"
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_toLeftOf="@+id/iv_home_list">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_create_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="5dp"
                    android:text="@string/home_item_time"
                    android:textSize="48sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextViewContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_margin="5dp"
                        android:text="@string/home_item_device"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/TextViewContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_margin="5dp"
                        android:text="@string/home_item_id" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextViewContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_margin="5dp"
                        android:text="@string/home_item_title"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_create_date"
                        style="@style/TextViewContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_margin="5dp"
                        android:text="@string/home_item_date" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_home_list"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_alignParentRight="true"
            android:scaleType="centerCrop"
            android:src="@drawable/load_image" />
    </RelativeLayout>

</android.support.v7.widget.CardView>