<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlEnablePureScrollMode="true"
        app:srlEnableLoadMore="true"
        app:srlDragRate="0.75">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="70dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="2dp" />

                <TextView  style="@style/AppTheme.Label.Title.Large"
                    android:id="@+id/tv_user_name"
                    android:layout_marginTop="@dimen/padding_common"
                    android:textColor="@android:color/white"
                    android:text="未命名用户"/>

                <TextView  style="@style/AppTheme.Label.Discription"
                    android:layout_marginTop="@dimen/padding_common"
                    android:textColor="@android:color/white"
                    android:text="该用户很懒，什么都没有留下"/>

                <com.flyco.roundview.RoundTextView style="@style/AppTheme.Label.Title"
                    android:id="@+id/bt_alter_info"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="25dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:paddingBottom="10dp"
                    android:text="修改信息"
                    app:rv_strokeWidth="1dp"
                    app:rv_isRadiusHalfHeight="true"
                    app:rv_strokeColor="@android:color/white"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingTop="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="15dp"
                android:background="#44ffffff">
                <com.flyco.roundview.RoundFrameLayout
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    app:rv_isRadiusHalfHeight="true"
                    app:rv_backgroundColor="#ffbb11">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/padding_common"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/iv_key"/>
                </com.flyco.roundview.RoundFrameLayout>
                <TextView style="@style/AppTheme.Label.Title"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/user_tv_key"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="15dp"
                android:background="#77ffffff">
                <com.flyco.roundview.RoundFrameLayout
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    app:rv_isRadiusHalfHeight="true"
                    app:rv_backgroundColor="#ff11bb">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/padding_common"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/iv_clear"/>
                </com.flyco.roundview.RoundFrameLayout>
                <TextView style="@style/AppTheme.Label.Title"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/user_tv_clear"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="15dp"
                android:background="#aaffffff">
                <com.flyco.roundview.RoundFrameLayout
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    app:rv_isRadiusHalfHeight="true"
                    app:rv_backgroundColor="#11bbff">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/padding_common"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/iv_version"/>
                </com.flyco.roundview.RoundFrameLayout>
                <TextView style="@style/AppTheme.Label.Title"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/user_tv_version"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="15dp"
                android:background="#ddffffff">
                <com.flyco.roundview.RoundFrameLayout
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    app:rv_isRadiusHalfHeight="true"
                    app:rv_backgroundColor="#bb11ff">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/padding_common"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/user_logout"/>
                </com.flyco.roundview.RoundFrameLayout>
                <TextView style="@style/AppTheme.Label.Title"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/user_tv_logout"/>
            </LinearLayout>

        </LinearLayout>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

    <android.support.v7.widget.Toolbar style="@style/AppTheme.Toolbar"
        android:id="@+id/toolbar"
        android:background="@android:color/transparent"
        app:title="@string/tb_title_user"/>

</FrameLayout>
